samples/_failures_safe/1761708118_a43700_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a51aaba.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
